feat: user fetch, get
